--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -278,6 +278,7 @@ select {
   position: fixed;
   width: 300px;
   height: 40px;
+  margin-top: 30px;
   background: #dff1df;
   color: green;
   display: -webkit-box;
