--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -169,6 +169,7 @@ select {
   position: fixed;
   width: 300px;
   height: 40px;
+  margin-top: 30px; 
   background: #dff1df;
   color: green;
   display: flex;
