--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -167,6 +167,9 @@ select {
 
 .savedMessage {
   position: fixed;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   width: 300px;
   height: 40px;
   margin-top: 30px; 
